[package]
name = "bert"
version = "0.1.0"
authors = ["silvius"]
edition = "2018"

[dependencies]
ws = "0.8.1"
tokio-io = "0.1.12"
futures = "0.1.27"
tokio-core = "0.1.17"
tokio = "0.1.20"

[target.heroku]
version = "nightly"

[lib]
name = "bert"
path = "src/mod.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
